--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -11,8 +11,8 @@
   --gray-300: #A8A8B3;
   --gray-800: #29292e;
   --gray-850: #1f2729;
+  --gray-700: #323238;
   --gray-900: #121212;
-
   --cyan-500: #61dafb;
   --yellow-500: #eba417;
 }
