--- a/src/components/Header/styles.module.scss
+++ b/src/components/Header/styles.module.scss
@@ -25,7 +25,7 @@
       line-height: 5rem;
       color: var(--gray-300);
 
-      transition: color 0.2s;
+      transition: all 0.2s;
 
       &:hover{
         color: var(--white);
