feat: building static previews

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -8,6 +8,7 @@
   --white: #FFFFFF;
   
   --gray-50: #e1e1e6;
+  --gray-100: #b5b5bb;
   --gray-300: #A8A8B3;
   --gray-800: #29292e;
   --gray-850: #1f2729;
