--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Lato-fallback";
+  size-adjust: -9900.00%;
+  ascent-override: 96%;
+  src: local("Arial");
+}
+
 *{
   margin: 0;
   padding:0;
@@ -36,6 +43,7 @@ body{
 
 body, input, textarea, select, button{
   font: 400 1rem 'Roboto', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 button{
